Update Jarvis link and fix mobile stacking/overlaps for Work, Career, and Contact sections

--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -121,15 +121,6 @@
       0px 0px 110px 20px #f2c0ff;
   }
 }
-@keyframes timeline2 {
-  0% {
-    box-shadow: 0px 0px 5px 2px #d29bff;
-  }
-  100% {
-    box-shadow: 0px 0px 5px 2px #d29bff, 0px 0px 15px 5px #d097ff,
-      0px 0px 110px 20px #f2c0ff;
-  }
-}
 @media only screen and (max-width: 1400px) {
   .career-section h2 {
     font-size: 50px;
@@ -161,8 +152,7 @@
 @media only screen and (max-width: 1025px) {
   .career-section {
     padding: 70px 0px;
-    padding-top: 220px;
-    margin-top: -200px;
+    margin-top: 0;
     margin-bottom: 0;
   }
 }
@@ -191,24 +181,24 @@
   }
   .career-section h2 {
     width: 100%;
-    font-size: 45px;
-    line-height: 45px;
+    font-size: 38px;
+    line-height: 42px;
     margin-top: 0px;
+    margin-bottom: 40px;
   }
   .career-info-in {
     gap: 0px;
   }
   .career-info h3 {
-    font-size: 33px;
+    font-size: 28px;
   }
   .career-info-in,
   .career-info-box p {
     padding-left: 5%;
   }
   .career-section {
-    padding-top: 90px;
-    margin-top: -70px;
-
+    padding-top: 50px;
+    margin-top: 0;
     align-items: start;
     place-items: inherit;
     justify-content: left;
