--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -215,23 +215,55 @@
     gap: 20px;
   }
 } */
-@media only screen and (max-width: 1025px) {
-  .work-container {
-    align-content: normal;
+@media only screen and (max-width: 768px) {
+  .work-section {
+    height: auto;
+    padding-bottom: 80px;
   }
-  .work-flex {
+  .work-container {
     height: auto;
   }
-}
-@media only screen and (max-width: 480px) {
-  .work-section h2 {
-    font-size: 36px;
-    margin-top: 50px;
-    margin-bottom: 20px;
+  .work-flex {
+    flex-direction: column;
+    margin-left: 0;
+    padding-right: 0;
+    height: auto;
+    gap: 20px;
+    align-items: center;
+  }
+  .work-flex::before,
+  .work-flex::after {
+    display: none;
   }
   .work-box {
-    width: 280px;
-    padding: 20px;
+    width: 100%;
+    max-width: calc(100% - 40px);
+    border-right: none;
+    border-bottom: 1px solid #363636;
+    padding: 40px 0;
+    gap: 30px;
+  }
+  .work-flex .work-box:nth-child(even) {
+    flex-direction: column;
+  }
+  .work-section h2 {
+    font-size: 42px;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .work-title h3 {
+    font-size: 30px;
+    line-height: 30px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .work-section h2 {
+    font-size: 32px;
+  }
+  .work-box {
+    padding: 20px 0;
     gap: 20px;
   }
   .work-title h3 {
